implement NN for modelling sine curve

--- a/Regression.ipynb
+++ b/Regression.ipynb
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "id": "fb9e1a2b",
    "metadata": {},
    "outputs": [
@@ -104,6 +104,58 @@
     "\n",
     "![image-2.png](attachment:image-2.png)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5321b7a2",
+   "metadata": {},
+   "source": [
+    "## Measuring Accuracy\n",
+    "- With classification, accuracy is more easily defined, as either the model chooses the correct class or it doesn't\n",
+    "- With regression, outputs are floats, so direct equality can't be a metric for accuracy\n",
+    "- Instead we want to define accuracy by how much the predictions deviate from the ground truth value \n",
+    "- Divide the standard deviation of the ground truth by some number, which depends on the goals of the model\n",
+    "- For each output (each output neuron in each sample), check to see if the deviation from the ground truth is within the precision limit, if yes then the model was accurate (1), if no then it wasn't (0)\n",
+    "- Take the mean of all outputs to get a final accuracy metric"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "39f75a39",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.5\n"
+     ]
+    }
+   ],
+   "source": [
+    "y = np.array([2, 3, 4, 5])  # ground truth\n",
+    "precision_limit = np.std(y) / 250.0  # 250 chosen arbitrarily\n",
+    "\n",
+    "predictions = np.array([2.0, 3.1, 5.2, 5.001])\n",
+    "accuracy = np.mean(np.absolute(predictions - y) < precision_limit)\n",
+    "print(accuracy)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "28513f4a",
+   "metadata": {},
+   "source": [
+    "## Xavier / Glorot Uniform\n",
+    "- Currently, weights are being initialized by multiplying the weights by a 0.01 factor\n",
+    "- Changing this factor can actually help a model learn better\n",
+    "- The Xavier/Glorot uniform is a method to initialize the weights based on the number of inputs and number of neurons\n",
+    "- It still samples from the normal distribution, but while we hard-coded the limit of [-0.01, 0.01], the Xavier uniform defines the limit as sqrt(6 / (fan_in + fan_out)), where fan_in is the number of inputs to the layer and fan_out is the number of outputs\n",
+    "- So if there are multiple hidden layers with different number of neurons, the limits for the distribution will be different\n",
+    "### A Note on Learning Rate\n",
+    "- If you see the accuracy is jumping around between epochs, it may be because the learning rate is set too high"
+   ]
   }
  ],
  "metadata": {
@@ -122,7 +174,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.1"
+   "version": "3.12.6"
   }
  },
  "nbformat": 4,
