--- a/PyTorch_Tutorial.ipynb
+++ b/PyTorch_Tutorial.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP2i2NPSz7OVykxLvbgPE8l"
+      "authorship_tag": "ABX9TyPKOfwvxh+Dtoi6nQN+pHNt",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -15,6 +16,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/duck-wad/Neural-Networks-Introduction/blob/master/PyTorch_Tutorial.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "source": [
@@ -50,7 +61,7 @@
         "id": "g_9UU8ZApBjl",
         "outputId": "f6f4c087-772c-4f77-de59-9aa4b58e99aa"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -79,7 +90,7 @@
         },
         "outputId": "86edad11-a38b-4b7c-b89b-c8966e424b33"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -108,7 +119,7 @@
         "id": "REvUj_GbHG6j",
         "outputId": "b4d17ccc-7ecd-4811-e187-f343bb6466d2"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -141,7 +152,7 @@
         "id": "BLHbjvKvHT29",
         "outputId": "f6437355-9b5d-44c6-cf49-03f71a2dd963"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -167,7 +178,7 @@
         "id": "62chjRYmHYnZ",
         "outputId": "5f5a0dd2-fa03-4216-8ba0-8764634b1b7f"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -192,7 +203,7 @@
         "id": "602AzbesH8_A",
         "outputId": "4a1d857b-ecd8-444a-a968-14c24286c939"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -219,7 +230,7 @@
         "id": "fVnXXa92ILh9",
         "outputId": "50946087-baee-4bb0-e682-b7fce2400ec4"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -257,7 +268,7 @@
         "id": "mHLvr3jOIcOF",
         "outputId": "5c61f684-f046-4e9c-c294-f9f1fa968b1c"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -296,7 +307,7 @@
         "id": "UwlyRXzyIvqy",
         "outputId": "188212d6-e961-4b83-b668-6df97a0cac2b"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -332,7 +343,7 @@
         "id": "Ng7faqqpKCAJ",
         "outputId": "0f4c4979-c56f-4414-d0b5-6584587ca942"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -360,7 +371,7 @@
         "id": "X97U4uDRKnWZ",
         "outputId": "95728154-bafd-4f86-b052-dcfb0080f8aa"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -394,7 +405,7 @@
         "id": "f48TVQH-K8m4",
         "outputId": "49adffcc-ade0-4a6c-8d01-7bed8c1c8f18"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -478,7 +489,7 @@
         "id": "VISW2v_aMLlb",
         "outputId": "8e5f4291-5ea6-48a0-9552-269af3378809"
       },
-      "execution_count": 78,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -521,7 +532,7 @@
         "id": "xjDXjlfmN85d",
         "outputId": "5f03c0f6-dbfd-4ccf-e21b-ea09aa668256"
       },
-      "execution_count": 79,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -567,7 +578,7 @@
         "id": "igKejIIsQlq3",
         "outputId": "cadd2591-0b71-40fe-b922-bd359d9b3892"
       },
-      "execution_count": 60,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -597,7 +608,7 @@
         "id": "FBlCFR9TQtgi",
         "outputId": "0950d379-2937-49dc-9492-f3c6ae090075"
       },
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -628,7 +639,7 @@
         "id": "d-aiTT9pRHUE",
         "outputId": "d4b6c8bb-a2d1-4e65-bdaf-a29867a41da4"
       },
-      "execution_count": 62,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -710,7 +721,7 @@
         "id": "FSXuc2UbTGVq",
         "outputId": "b3fce925-5032-494e-b5b5-b4b798659f11"
       },
-      "execution_count": 80,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -761,14 +772,14 @@
         "# number of samples is number of rows, number of features is columns\n",
         "n_samples, n_features = X.shape\n",
         "\n",
-        "X_test = torch.tensor([5], dtype=torch.float32)\n",
+        "X_test = torch.tensor([10], dtype=torch.float32)\n",
         "\n",
         "# neural network classes that you define must inherit from the nn.Module\n",
         "\n",
         "class LinearRegression(nn.Module):\n",
         "  def __init__(self, input_dim, output_dim):\n",
         "    # call the init of the nn parent\n",
-        "    super(LinearRegression, self).__init__()\n",
+        "    super().__init__()\n",
         "    # define different layers\n",
         "    # for linear regression we add only one Linear layer\n",
         "    self.lin = nn.Linear(input_dim, output_dim)\n",
@@ -795,7 +806,8 @@
         "\n",
         "# 3. define training loop\n",
         "for epoch in range(n_epochs):\n",
-        "  # when model is called, it will automatically call the forward class, so no need to call model.forward()\n",
+        "  # when model is called, PyTorch automatically triggers a __call__ method which calls the forward class\n",
+        "  # so no need to call model.forward()\n",
         "  y_pred = model(X)\n",
         "\n",
         "  # calculate loss, pass in the expected then predicted\n",
@@ -820,26 +832,26 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "5_ZcXM5LYYhx",
-        "outputId": "5ba18f8d-7521-4806-dd04-7df69471d2b2"
+        "outputId": "ca1b0254-af8a-45b0-94cc-498fac9da9ce"
       },
-      "execution_count": 6,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Prediction before training: f(tensor([5.])) = -1.292\n",
-            "epoch 10, w = 2.090576648712158, loss = 0.05550682172179222\n",
-            "epoch 20, w = 2.088217258453369, loss = 0.05106702819466591\n",
-            "epoch 30, w = 2.0847585201263428, loss = 0.04714048653841019\n",
-            "epoch 40, w = 2.081434726715088, loss = 0.043515894562006\n",
-            "epoch 50, w = 2.0782415866851807, loss = 0.04016993194818497\n",
-            "epoch 60, w = 2.0751733779907227, loss = 0.03708137199282646\n",
-            "epoch 70, w = 2.072225570678711, loss = 0.03423016890883446\n",
-            "epoch 80, w = 2.0693933963775635, loss = 0.03159824758768082\n",
-            "epoch 90, w = 2.0666720867156982, loss = 0.029168598353862762\n",
-            "epoch 100, w = 2.0640575885772705, loss = 0.026925910264253616\n",
-            "Prediction after training: f(5.0) = 9.960\n"
+            "Prediction before training: f(tensor([10.])) = -2.488\n",
+            "epoch 10, w = 2.086758852005005, loss = 0.0510685071349144\n",
+            "epoch 20, w = 2.084592819213867, loss = 0.046957120299339294\n",
+            "epoch 30, w = 2.0812761783599854, loss = 0.04334663599729538\n",
+            "epoch 40, w = 2.0780892372131348, loss = 0.04001369699835777\n",
+            "epoch 50, w = 2.0750269889831543, loss = 0.03693711757659912\n",
+            "epoch 60, w = 2.072084903717041, loss = 0.034096989780664444\n",
+            "epoch 70, w = 2.069258213043213, loss = 0.031475286930799484\n",
+            "epoch 80, w = 2.066542387008667, loss = 0.02905518375337124\n",
+            "epoch 90, w = 2.0639328956604004, loss = 0.026821179315447807\n",
+            "epoch 100, w = 2.0614259243011475, loss = 0.02475883439183235\n",
+            "Prediction after training: f(10.0) = 20.269\n"
           ]
         }
       ]
@@ -850,7 +862,7 @@
       "metadata": {
         "id": "CqeOmISEnAEx"
       },
-      "execution_count": 6,
+      "execution_count": 2,
       "outputs": []
     }
   ]
