--- a/PyTorch_Tutorial.ipynb
+++ b/PyTorch_Tutorial.ipynb
@@ -4,8 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPKOfwvxh+Dtoi6nQN+pHNt",
-      "include_colab_link": true
+      "gpuType": "T4",
+      "authorship_tag": "ABX9TyPUae5S+V1J/qxlF4KaHN7R"
     },
     "kernelspec": {
       "name": "python3",
@@ -13,23 +13,15 @@
     },
     "language_info": {
       "name": "python"
-    }
+    },
+    "accelerator": "GPU"
   },
   "cells": [
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/duck-wad/Neural-Networks-Introduction/blob/master/PyTorch_Tutorial.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "# PyTorch Introduction"
+        "# PyTorch Introduction\n",
+        "- From video: https://www.youtube.com/watch?v=OIenNRt2bjg&list=LL&index=2"
       ],
       "metadata": {
         "id": "j5-1T4LFo_7A"
@@ -834,7 +826,7 @@
         "id": "5_ZcXM5LYYhx",
         "outputId": "ca1b0254-af8a-45b0-94cc-498fac9da9ce"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -857,13 +849,175 @@
       ]
     },
     {
-      "cell_type": "code",
-      "source": [],
+      "cell_type": "markdown",
+      "source": [
+        "## Training a Neural Network\n",
+        "- Follows same pipeline as the single neuron\n"
+      ],
       "metadata": {
-        "id": "CqeOmISEnAEx"
+        "id": "1f6l6KUTUmTT"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# training a NN to recognize digits 0-9\n",
+        "\n",
+        "import torch\n",
+        "import torch.nn as nn\n",
+        "import torchvision\n",
+        "import torchvision.transforms as transforms\n",
+        "import matplotlib.pyplot as plt\n",
+        "\n",
+        "# configure the device for GPU if available\n",
+        "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
+        "\n",
+        "# define the hyperparameters\n",
+        "input_size = 784 # images of shape 28x28\n",
+        "hidden_size = 500 # number of neurons in hidden layer\n",
+        "num_classes = 10 # 10 because 10 digits from 0-9\n",
+        "num_epochs = 2\n",
+        "batch_size = 100\n",
+        "learning_rate = 0.001\n",
+        "\n",
+        "# MNIST dataset built in from torch\n",
+        "# this returns set of 600000 images\n",
+        "train_dataset = torchvision.datasets.MNIST(root='./data',\n",
+        "                                            train=True,\n",
+        "                                            transform=transforms.ToTensor(),\n",
+        "                                            download=True)\n",
+        "test_dataset = torchvision.datasets.MNIST(root='./data',\n",
+        "                                            train=True,\n",
+        "                                            transform=transforms.ToTensor())\n",
+        "\n",
+        "# data loader built in from torch\n",
+        "# provides optimized way to iterate over the dataset\n",
+        "# since batch_size was defined to be 100, the length of train_loader is 600 instead of 600000 (600 batches of 100)\n",
+        "train_loader = torch.utils.data.DataLoader(dataset=train_dataset,\n",
+        "                                           batch_size=batch_size,\n",
+        "                                           shuffle=True)\n",
+        "test_loader = torch.utils.data.DataLoader(dataset=test_dataset,\n",
+        "                                          batch_size=batch_size,\n",
+        "                                          shuffle=False)\n",
+        "\n",
+        "'''\n",
+        "# example of the images\n",
+        "examples = iter(test_loader)\n",
+        "example_data, example_targets = next(examples)\n",
+        "\n",
+        "for i in range(6):\n",
+        "  plt.subplot(2,3,i+1)\n",
+        "  plt.imshow(example_data[i][0], cmap='gray')\n",
+        "plt.show()\n",
+        "'''\n",
+        "\n",
+        "# create the network model\n",
+        "class NeuralNet(nn.Module):\n",
+        "  def __init__(self, input_size, hidden_size, num_classes):\n",
+        "    super().__init__()\n",
+        "    self.l1 = nn.Linear(input_size, hidden_size) # this is the weighted sum plus biases, if bias=True\n",
+        "    self.relu = nn.ReLU() # the activation function for layer 1\n",
+        "    self.l2 = nn.Linear(hidden_size, num_classes)\n",
+        "  def forward(self, x):\n",
+        "    out = self.l1(x)\n",
+        "    out = self.relu(out)\n",
+        "    out = self.l2(out)\n",
+        "    # no activation applied at output. PyTroch crossentropy requires values with no activation applied\n",
+        "    return out\n",
+        "\n",
+        "# to use the GPU, the model needs to be pushed to the device\n",
+        "model = NeuralNet(input_size, hidden_size, num_classes).to(device)\n",
+        "\n",
+        "# define loss and optimizer\n",
+        "# crossentropy used for classification\n",
+        "criterion = nn.CrossEntropyLoss()\n",
+        "optimizer = torch.optim.Adam(model.parameters(), lr=learning_rate)\n",
+        "\n",
+        "# define the training loop\n",
+        "# have 2 epochs (number of iterations over the entire training set)\n",
+        "# each epoch, define a loop to train on each batch in train_loader\n",
+        "# each batch contain 100 images. So model will perform forward/backward pass on a batch of 100, update params, move to next batch of 100\n",
+        "# and repeat 600 times to look at 600000 images\n",
+        "# then repeat for another epoch\n",
+        "n_total_steps = len(train_loader)\n",
+        "for epoch in range(num_epochs):\n",
+        "  # unpack each batch of 100 images and labels (expected output)\n",
+        "  for i, (images, labels) in enumerate(train_loader):\n",
+        "    # the images need to be reshaped into the shape the NN expects\n",
+        "    # the original shape is a 4D matrix of size [100, 1, 28, 28]\n",
+        "    # the NN expects [100, 784] where there are 100 rows (number of images in batch) and 784 pixels per image\n",
+        "    # since the model was pushed to the GPU, the tensors must also be pushed to GPU\n",
+        "    images = images.reshape(-1, 28*28).to(device)\n",
+        "    labels = labels.to(device)\n",
+        "\n",
+        "    # forward pass by calling model with the inputs\n",
+        "    outputs = model(images)\n",
+        "    # average loss in the batch of 100 images\n",
+        "    loss = criterion(outputs, labels)\n",
+        "\n",
+        "    # calculate gradients\n",
+        "    loss.backward()\n",
+        "    # update parameters\n",
+        "    optimizer.step()\n",
+        "    # reset the gradients\n",
+        "    optimizer.zero_grad()\n",
+        "\n",
+        "    if (i+1) % 100 == 0:\n",
+        "      print(f'Epoch {epoch+1}/{num_epochs}, Step [{i+1}/{n_total_steps}], Loss: {loss}')\n",
+        "\n",
+        "# evaluate the performance of the model\n",
+        "# all model evaluation should be done in torch.no_grad to prevent gradient tracking\n",
+        "with torch.no_grad():\n",
+        "  n_correct = 0\n",
+        "  n_samples = len(test_loader.dataset)\n",
+        "\n",
+        "  for images, labels in test_loader:\n",
+        "    images = images.reshape(-1, 28*28).to(device)\n",
+        "    labels = labels.to(device)\n",
+        "\n",
+        "    outputs = model(images)\n",
+        "\n",
+        "    # outputs is the raw output\n",
+        "    # need to find the max value per image, and its index which indicates the prediction\n",
+        "    # torch.max returns the maximum output value and its index\n",
+        "    _, predicted = torch.max(outputs, 1)\n",
+        "    n_correct += (predicted == labels).sum().item()\n",
+        "\n",
+        "  acc = n_correct / n_samples\n",
+        "  print(f'Accuracy of the network on the {n_samples} test images: {acc*100} %')\n",
+        "\n",
+        "PATH = './digit_id.path'\n",
+        "torch.save(model.state_dict(), PATH)"
+      ],
+      "metadata": {
+        "id": "CqeOmISEnAEx",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "a1903e33-72bb-4ee5-a18d-c34fa1658d83"
       },
-      "execution_count": 2,
-      "outputs": []
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Epoch 1/2, Step [100/600], Loss: 0.2334097921848297\n",
+            "Epoch 1/2, Step [200/600], Loss: 0.398881733417511\n",
+            "Epoch 1/2, Step [300/600], Loss: 0.22981984913349152\n",
+            "Epoch 1/2, Step [400/600], Loss: 0.16696451604366302\n",
+            "Epoch 1/2, Step [500/600], Loss: 0.1656610369682312\n",
+            "Epoch 1/2, Step [600/600], Loss: 0.22521807253360748\n",
+            "Epoch 2/2, Step [100/600], Loss: 0.06800297647714615\n",
+            "Epoch 2/2, Step [200/600], Loss: 0.11497944593429565\n",
+            "Epoch 2/2, Step [300/600], Loss: 0.06505492329597473\n",
+            "Epoch 2/2, Step [400/600], Loss: 0.09721935540437698\n",
+            "Epoch 2/2, Step [500/600], Loss: 0.04298058897256851\n",
+            "Epoch 2/2, Step [600/600], Loss: 0.06278544664382935\n",
+            "Accuracy of the network on the 60000 test images: 97.82499999999999 %\n"
+          ]
+        }
+      ]
     }
   ]
 }
