--- a/Harmonic_Oscillator_PINN.ipynb
+++ b/Harmonic_Oscillator_PINN.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNIvK87+sLzZM10hlZxKydJ"
+      "authorship_tag": "ABX9TyMXoJf4l7Q778suOQQwjRjz"
     },
     "kernelspec": {
       "name": "python3",
@@ -190,6 +190,7 @@
         "\n",
         "# define the optimizer\n",
         "optimizer = torch.optim.Adam(pinn.parameters(), lr=learning_rate)\n",
+        "\n",
         "for epoch in range(epochs+1):\n",
         "  # compute the boundary loss by running PINN on the boundary point\n",
         "  u = pinn(t_boundary) # shape (1,1) since one boundary point\n",
@@ -198,6 +199,7 @@
         "  # torch.autograd.grad computes the gradient of u wrt t_boundary using the computation graph\n",
         "  # need argument torch.ones_like\n",
         "  # create_graph will hold onto the computation graph used to compute the derivative, which is needed for higher order derivative d2udt2\n",
+        "  # torch.autograd.grad returns a tuple with the partial deriv. wrt each variable. since only one var (t) get the first entry\n",
         "  dudt = torch.autograd.grad(u, t_boundary, torch.ones_like(u), create_graph=True)[0]\n",
         "  loss2 = (torch.squeeze(dudt) - 0)**2\n",
         "\n",
@@ -215,7 +217,7 @@
         "\n",
         "  # plot the results\n",
         "  if epoch % 5000 == 0:\n",
-        "    # runthe PINN on the test data, make sure to do this outside of computation graph\n",
+        "    # run the PINN on the test data, make sure to do this outside of computation graph\n",
         "    with torch.no_grad():\n",
         "      u = pinn(t_test)\n",
         "      plt.figure(figsize = (6, 2.5))\n",
@@ -237,9 +239,9 @@
           "height": 1000
         },
         "id": "zCfRjYUKxPe8",
-        "outputId": "287113fc-99c4-4c76-89e8-cc26cb4cdad7"
+        "outputId": "fbfd3719-1251-420c-8bb5-3d4d2eabc6a9"
       },
-      "execution_count": 4,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "display_data",
@@ -331,9 +333,9 @@
           "base_uri": "https://localhost:8080/",
           "height": 469
         },
-        "outputId": "997c3635-e3b4-4716-c06e-65b5de8376a9"
+        "outputId": "0470be37-bc70-456d-891d-2c19a72ceb8d"
       },
-      "execution_count": 25,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -389,6 +391,8 @@
         "mus = []\n",
         "\n",
         "# add mu to the optimizer\n",
+        "# need to wrap pinn.parameters() in a list() because it is initially a generator\n",
+        "# need to convert to a list if want to add mu as a learnable param\n",
         "optimizer = torch.optim.Adam(list(pinn.parameters())+[mu], lr=learning_rate)\n",
         "\n",
         "for epoch in range(epochs+1):\n",
@@ -439,9 +443,9 @@
           "height": 1000
         },
         "id": "UF8pGiraJHHA",
-        "outputId": "09aca11c-b3ce-459d-dac5-6252142939a8"
+        "outputId": "4d5c7d8e-b472-4de1-a270-beb9e87cf37b"
       },
-      "execution_count": 26,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "display_data",
